kubernetes/security/falco/namespace-falco.yml
apiVersion: v1
kind: Namespace
metadata:
  name: falco
  labels:
    purpose: security
